BRO-19 Add flag colloring, repaired axis on mobile.

--- a/apps/client/src/scss/RepairStatusPage/_Card.scss
+++ b/apps/client/src/scss/RepairStatusPage/_Card.scss
@@ -77,7 +77,7 @@
 .toggler {
   width: 25px;
   height: 25px;
-  border: 1px solid #b3b3b3;
+  border: 1px solid;
   border-radius: 100%;
   background-color: transparent;
   margin-top: $spacing-x3;
